Added divs for each project

--- a/css/display.less
+++ b/css/display.less
@@ -52,8 +52,9 @@ about me
 /***************************
 projects
 ****************************/
-.projects {
-	
+.project {
+	border: 1px solid black;
+	height: 25%;
 }
 
 
