--- a/css/display.less
+++ b/css/display.less
@@ -1,4 +1,6 @@
-
+* {
+	box-sizing: border-box;
+}
 
 .splash-img {
 	width: 90%;
@@ -55,6 +57,8 @@ projects
 .project {
 	border: 1px solid black;
 	height: 25%;
+	width: 100%;
+	padding: 2.5% 5%;
 }
 
 
