Added projects to projects section

--- a/css/background.less
+++ b/css/background.less
@@ -1,11 +1,4 @@
 
-.wrapper {
-	height: 92vh;
-}
-
-.wrappers {
-	height: 101vh;
-}
 
 .test-img {
 	background-color: white;
@@ -41,6 +34,14 @@ projects
 ****************************/
 .projects {
 	background-color: lightgray;
+}
+
+.project-cont {
+	background-color: white;
+}
+
+.project-desc {
+	background-color: rgb(0,0,0);
 }
 
 
