--- a/css/display.less
+++ b/css/display.less
@@ -2,6 +2,14 @@
 	box-sizing: border-box;
 }
 
+.wrapper {
+	height: 92vh;
+}
+
+.wrappers {
+	height: 101vh;
+}
+
 .splash-img {
 	width: 90%;
 	height: 100vh;
@@ -12,6 +20,18 @@
 .fixed {
 	position: fixed;
 	top: 0;
+}
+
+/*used for visually hiding but semantically avaiable for screenreaders*/
+.visuallyhidden { 
+	border: 0; 
+	clip: rect(0 0 0 0); 
+	height: 1px; 
+	margin: -1px; 
+	overflow: hidden; 
+	padding: 0; 
+	position: absolute; 
+	width: 1px; 
 }
 
 
@@ -29,6 +49,7 @@ nav
 .nav {
 	width: 100%;
 	height: 8vh;
+	z-index: 10;
 	ul > li {
 		display: inline-block;
 		list-style: none;
@@ -40,6 +61,11 @@ nav
 .nav-wrap {
 	width: 100%;
 	height: 8vh;
+}
+
+.nav > ul {
+	text-align: center;
+	padding: 0;
 }
 
 /***************************
@@ -55,12 +81,57 @@ about me
 projects
 ****************************/
 .project {
-	border: 1px solid black;
 	height: 25%;
 	width: 100%;
 	padding: 2.5% 5%;
 }
 
+.project-cont {
+	height: 235px;
+	text-align: center;
+}
+
+.project-img {
+	display: inline-block;
+	width: 38%;
+	padding-top: 38px;
+}
+
+.project-desc {
+	display: inline-block;
+	width: 60%;
+	height: 100%;
+	position: relative;
+    vertical-align: top;
+	p {
+		padding: 0 1em;
+	}
+
+	p > span {
+		display: block;
+		margin-top: 6px;
+		word-wrap: break-word;
+		font-style: italic;
+	}
+}
+
+.project-btn {
+	border-top: 1px solid white;
+	position: absolute;
+    bottom: -5px;
+    width: 100%;
+	a:nth-child(-n+2) > img {
+		border-right: 1px solid white;	
+	}
+	img {
+		padding: 8px 10.5%;
+
+	}
+
+}
+
+
+/*scrummage*/
 
 /***************************
 contacts
