Added info on contact page and fixed sticky nav padding issues

--- a/css/typography.less
+++ b/css/typography.less
@@ -9,7 +9,9 @@ splash page
 /***************************
 nav
 ****************************/
-
+.nav ul > li {
+	color: rgba(0,0,0,0.5);
+}
 
 /***************************
 about me
@@ -20,6 +22,9 @@ about me
 /***************************
 projects
 ****************************/
+.project-hdr {
+	text-align: center;
+}
 
 .project-desc {
 	color: rgb(255, 255, 255);
