--- a/css/background.less
+++ b/css/background.less
@@ -17,7 +17,11 @@ splash page
 nav
 ****************************/
 .nav {
-	background-color: white;
+	background: white;
+    background: -webkit-linear-gradient(white, rgba(255,255,255,0)); 
+    background: -o-linear-gradient(white, rgba(255,255,255,0)); 
+    background: -moz-linear-gradient(white, rgba(255,255,255,0));
+    background: linear-gradient(white, rgba(255,255,255,0));
 }
 
 /***************************
@@ -34,6 +38,11 @@ projects
 ****************************/
 .projects {
 	background-color: lightgray;
+/*	background-image: url(../images/connect.png);*/
+	background-size: cover;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-position: center center;
 }
 
 .project-cont {
