--- a/css/display.less
+++ b/css/display.less
@@ -2,6 +2,26 @@
 	box-sizing: border-box;
 }
 
+ul {
+	padding: 0;
+}
+
+li {
+	list-style: none;
+
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+
+
+/*Needed for fixed image scroll*/
+body, html, main {
+	height: 100%;
+}
+
 .wrapper {
 	height: 92vh;
 }
@@ -54,9 +74,16 @@ nav
 		display: inline-block;
 		list-style: none;
 		font-size: 14px;
-		margin-right: 5px;
+		padding: 0 10px;
+	    border-right: 1px solid lightgray;
+	}
+
+	ul > li > img {
+		height: 13px;
 	}
 }
+
+
 
 .nav-wrap {
 	width: 100%;
@@ -64,8 +91,9 @@ nav
 }
 
 .nav > ul {
-	text-align: center;
-	padding: 0;
+    text-align: center;
+    padding: 1rem;
+    margin: 0;
 }
 
 /***************************
@@ -80,6 +108,11 @@ about me
 /***************************
 projects
 ****************************/
+.projects {
+    padding-top: 30px;	
+	padding-bottom: 100px;
+}
+
 .project {
 	height: 25%;
 	width: 100%;
@@ -136,6 +169,31 @@ projects
 /***************************
 contacts
 ****************************/
-.contacts {
-	
+.contacts-hdr {
+	margin: 0;
 }
+
+.contacts-cont {
+	padding-top: 30px;
+	text-align: center;
+}
+
+.contact-sect {
+	height: 320px;
+	padding: 30px 0;
+
+	ul > a > li {
+		padding: 23px;
+    	border-top: 1px solid lightgray;
+	}	
+
+	ul > a:nth-child(3) > li {
+    	border-bottom: 1px solid lightgray;
+	}
+
+	ul > a > li > img {
+		vertical-align: middle;
+		margin-right: 5px;
+	}
+}
+
