--- a/css/display.less
+++ b/css/display.less
@@ -103,6 +103,17 @@ about me
 	
 }
 
+.about-cont {
+	width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.about-cont > img {
+	width: 55%;
+    border-radius: 50%;
+}
+
 
 
 /***************************
@@ -185,6 +196,8 @@ contacts
 	ul > a > li {
 		padding: 23px;
     	border-top: 1px solid lightgray;
+    	text-align: initial;
+    	padding-left: 80px;
 	}	
 
 	ul > a:nth-child(3) > li {
