--- a/css/typography.less
+++ b/css/typography.less
@@ -17,6 +17,14 @@ nav
 about me
 ****************************/
 
+.about-cont {
+	line-height: 1.8;
+	text-align: center;
+}
+
+.about-quote {
+	font-style: italic;
+}
 
 
 /***************************
@@ -29,6 +37,20 @@ projects
 .project-desc {
 	color: rgb(255, 255, 255);
 	font-size: 15.1px;
+}
+
+.project-desc {
+
+	p > span {
+		display: block;
+		margin-top: 6px;
+		word-wrap: break-word;
+		font-style: italic;
+	}
+
+	p > span > strong {
+		color: lightblue;
+	}
 }
 
 /***************************
