Finished splash page and started on contacts page

--- a/css/display.less
+++ b/css/display.less
@@ -30,12 +30,7 @@ body, html, main {
 	height: 101vh;
 }
 
-.splash-img {
-	width: 90%;
-	height: 100vh;
-	margin-left: auto;
-	margin-right: auto;
-}
+
 
 .fixed {
 	position: fixed;
@@ -58,9 +53,28 @@ body, html, main {
 /***************************
 splash page
 ****************************/
+.splash-img {
+	width: 100%;
+	/*height: 100vh;*/
+	margin-left: auto;
+	margin-right: auto;
+}
 
 .splash {
-	
+	width: 80%;
+	margin-bottom: -1px;
+}
+
+.splash-img > img {
+	width: 101%;
+	margin: 0 -1px;
+}
+
+.splash-top, .splash-bottom {
+    height: 24vh;
+    border: none;
+    width: 101%;
+    margin: -5px -2px;
 }
 
 /***************************
@@ -112,6 +126,7 @@ about me
 .about-cont > img {
 	width: 55%;
     border-radius: 50%;
+    padding-top: 10px;
 }
 
 
