--- a/css/typography.less
+++ b/css/typography.less
@@ -56,3 +56,13 @@ projects
 /***************************
 contacts
 ****************************/
+
+.contacts-cont {
+	color: rgb(60,155,64);
+}
+
+.contact-sect ul > a > li {
+	color: rgb(60,155,64);
+}
+
+/*60,155,64*/
