--- a/css/background.less
+++ b/css/background.less
@@ -9,7 +9,22 @@ splash page
 ****************************/
 
 .splash {
-	background-color: red;
+	background-image: url(../images/beach1.png);
+	background-position: center;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-position: center center;
+	margin-left: auto;
+    margin-right: auto;
+    width: 98%;
+}
+
+.splash-img {
+	background-color: transparent;
+}
+
+.splash-top, .splash-bottom {
+	background-color: white;
 }
 
 
@@ -28,7 +43,7 @@ nav
 about me
 ****************************/
 .about {
-	background-color: lightblue;
+	background-color: rgb(88,228,160);
 }
 
 
@@ -58,5 +73,5 @@ projects
 contacts
 ****************************/
 .contacts {
-	background-color: lightpink;
+	background-color: white;
 }
