Added the about me icon

--- a/css/background.less
+++ b/css/background.less
@@ -43,7 +43,7 @@ nav
 about me
 ****************************/
 .about {
-	background-color: rgb(88,228,160);
+	background-color: rgb(80,169,110);;
 }
 
 
