Added projects section fixed background image

--- a/css/background.less
+++ b/css/background.less
@@ -43,7 +43,7 @@ nav
 about me
 ****************************/
 .about {
-	background-color: rgb(80,169,110);;
+	background-color: rgb(80,169,110);
 }
 
 
@@ -53,7 +53,7 @@ projects
 ****************************/
 .projects {
 	background-color: lightgray;
-/*	background-image: url(../images/connect.png);*/
+	background-image: url(../images/beach3.png);
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
