--- a/css/typography.less
+++ b/css/typography.less
@@ -35,11 +35,9 @@ projects
 }
 
 .project-desc {
-	color: rgb(255, 255, 255);
-	font-size: 15.1px;
-}
 
-.project-desc {
+	color: rgb(255, 255, 255);
+	font-size: 15.1px;	
 
 	p > span {
 		display: block;
@@ -49,7 +47,7 @@ projects
 	}
 
 	p > span > strong {
-		color: lightblue;
+		color: rgb(80,169,110);
 	}
 }
 
