Started to style Desktop view

--- a/css/background.less
+++ b/css/background.less
@@ -75,3 +75,76 @@ contacts
 .contacts {
 	background-color: white;
 }
+
+
+
+
+/****iPad View*****/
+@media only screen and (min-width: 640px) {
+
+/***************************
+splash page
+****************************/
+
+
+/***************************
+nav
+****************************/
+
+
+/***************************
+about me
+****************************/
+
+
+
+/***************************
+projects
+****************************/
+
+
+/***************************
+contacts
+****************************/
+
+}
+
+/****Desktop View*****/
+@media only screen and (min-width: 1000px) {
+
+	/***************************
+	splash page
+	****************************/
+
+
+	/***************************
+	nav
+	****************************/
+
+
+	/***************************
+	about me
+	****************************/
+	.about {
+		background-color: rgb(217, 217, 217);
+	}
+
+	.edgar-anima {
+		background-image: url(../images/edgar.png);
+		background-size: 50%;
+		/*background-attachment: fixed;*/
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
+
+
+	/***************************
+	projects
+	****************************/
+
+
+	/***************************
+	contacts
+	****************************/
+
+}
