--- a/css/index.less
+++ b/css/index.less
@@ -4,10 +4,10 @@
 uses variable to common properties
 *************************/
 
-@import 'background.less';
-@import 'typography.less';
-@import 'display.less';
 @import 'grid.less';
+@import 'background.less';
+@import 'display.less';
+@import 'typography.less';
 
 /****************************
 Variables and Imports
@@ -15,28 +15,34 @@ Variables and Imports
 
 
 
+/*template*/
+/****iPad View*****/
+@media only screen and (min-width: 640px/) {
 
-/***************************
-splash page
-****************************/
-
-
-/***************************
-nav
-****************************/
+	/***************************
+	splash page
+	****************************/
 
 
-/***************************
-about me
-****************************/
+	/***************************
+	nav
+	****************************/
+
+
+	/***************************
+	about me
+	****************************/
 
 
 
-/***************************
-projects
-****************************/
+	/***************************
+	projects
+	****************************/
 
 
-/***************************
-contacts
-****************************/
+	/***************************
+	contacts
+	****************************/
+
+}
+
