--- a/css/typography.less
+++ b/css/typography.less
@@ -80,7 +80,7 @@ contacts
 	.nav {
 
 		ul > li {
-			font-size: 25px;
+			font-size: 21px;
 		}
 	}
 
@@ -90,7 +90,7 @@ contacts
 	.about-cont {
 
 		.desc {
-			font-size: 24px;
+			/*font-size: 24px;*/
 		}
 	}
 
@@ -143,10 +143,31 @@ contacts
 	/***************************
 	about me
 	****************************/
+	.about-hdr {
+		color: rgb(60,155,64);
+	}
+
 	.about-cont {
 		text-align: left;
 		.desc {
 			line-height: 1.5;
+		}
+	}
+
+	.animation {
+		font-size: 70px;
+		color: rgb(60,155,64);
+
+		h3 {
+			line-height: 3;
+		}
+
+	}
+
+	.about-quote {
+
+		> strong {
+			color: rgb(60,155,64);
 		}
 	}
 
@@ -159,5 +180,7 @@ contacts
 	/***************************
 	contacts
 	****************************/
-
+	.contacts-hdr {
+		font-size: 3em;
+	}
 }
