--- a/css/display.less
+++ b/css/display.less
@@ -83,6 +83,16 @@ splash page
     margin: -5px -2px;
 }
 
+.white {
+	background-color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
 /***************************
 nav
 ****************************/
