Fixed extra small screen view

--- a/css/display.less
+++ b/css/display.less
@@ -83,6 +83,10 @@ splash page
     margin: -5px -2px;
 }
 
+.splash-bottom {
+	height: 41vh;
+}
+
 .white {
 	background-color: white;
     position: absolute;
@@ -215,7 +219,7 @@ projects
 	}
 	img {
 		padding: 8px 10.5%;
-		max-width: 32%;
+		max-width: 31%;
 	}
 
 }
