--- a/css/typography.less
+++ b/css/typography.less
@@ -18,7 +18,7 @@ about me
 ****************************/
 
 .about-cont {
-	line-height: 1.8;
+	/*line-height: 1.8;*/
 	text-align: center;
 
 }
@@ -26,6 +26,8 @@ about me
 .about-quote {
 	font-style: italic;
 }
+
+
 
 
 /***************************
@@ -145,21 +147,24 @@ contacts
 	****************************/
 	.about-hdr {
 		color: rgb(60,155,64);
+		font-size: 55px;
 	}
 
 	.about-cont {
 		text-align: left;
 		.desc {
 			line-height: 1.5;
+			font-size: 19px;
 		}
 	}
 
 	.animation {
 		font-size: 70px;
+		line-height: 1;
 		color: rgb(60,155,64);
 
 		h3 {
-			line-height: 3;
+			line-height: 1;
 		}
 
 	}
@@ -169,6 +174,36 @@ contacts
 		> strong {
 			color: rgb(60,155,64);
 		}
+	}
+
+	.lakers {
+		font-size: 38px;
+	}
+
+	.surfing {
+		font-size: 46px;
+	}
+
+	.sky_diving {
+		font-size: 61px;
+		text-align: left;
+	}
+
+	.thailand {
+		font-size: 65px;
+	}
+
+	.singapore {
+		font-size: 35px;
+		text-align: center;
+	}
+
+	.drawing {
+		font-size: 38px;
+	}
+
+	.graphic_design {
+		font-size: 40px;
 	}
 
 
