--- a/css/background.less
+++ b/css/background.less
@@ -29,6 +29,7 @@ splash page
 
 .white {
 	background-color: white;
+	z-index: 2;
 	animation: fadeInBack 2s;
 }
 
@@ -40,6 +41,17 @@ splash page
 	100% {
 		opacity: 0;
 		z-index: -1;
+	}
+}
+
+@keyframes fadeOutBack {
+	0% {
+		opacity: 0;
+		/*z-index: -1;*/
+	}
+	100% {
+		opacity: 1;
+		z-index: 2;
 	}
 }
 
