--- a/css/background.less
+++ b/css/background.less
@@ -13,7 +13,6 @@ splash page
 	background-position: center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-position: center center;
 	margin-left: auto;
     margin-right: auto;
     width: 98%;
@@ -35,10 +34,12 @@ splash page
 
 @keyframes fadeInBack {
 	0% {
+		transform: translate(0, 0, 0);
 		opacity: 1;
 		z-index: 2;
 	}
 	100% {
+		transform: translate(0, 0, 0);
 		opacity: 0;
 		z-index: -1;
 	}
@@ -46,10 +47,12 @@ splash page
 
 @keyframes fadeOutBack {
 	0% {
+		transform: translate(0, 0, 0);
 		opacity: 0;
 		/*z-index: -1;*/
 	}
 	100% {
+		transform: translate(0, 0, 0);
 		opacity: 1;
 		z-index: 2;
 	}
@@ -85,7 +88,7 @@ projects
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-position: center ;
 }
 
 .project-cont {
@@ -153,11 +156,9 @@ contacts
 	/***************************
 	about me
 	****************************/
+
 	.about {
 		background-color: rgb(217, 217, 217);
-	}
-
-	.about-cont {
 		background-image: url(../images/edgar.png);
 		background-size: 30%;
 		background-repeat: no-repeat;
