--- a/css/display.less
+++ b/css/display.less
@@ -41,6 +41,8 @@ body, html, main {
 .fixed {
 	position: fixed;
 	top: 0;
+	left: 0;
+	right:0;
 }
 
 /*used for visually hiding but semantically avaiable for screenreaders*/
@@ -58,31 +60,44 @@ body, html, main {
 /*animation code*/
 @keyframes LR {
 	0% {
-		transform: translate(100px,0);
+		transform: translate(70px,0);
 		opacity: 0;
 	}
 	100% {
-		transform: translate(0, 0);
+		transform: translate(0,0,0);
 		opacity: 1;	
+	}
+}
+
+@keyframes LRout {
+	0% {
+		transform: translate(0,0);
+		opacity: 1;
+	}
+	100% {
+		transform: translate(-70px,0,0);
+		opacity: 0;	
 	}
 }
 
 @keyframes RL {
 	0% {
-		transform: translate(-100px,0);
+		transform: translate(-70px,0);
 		opacity: 0;
 	}
 	100% {
-		transform: translate(0, 0);
+		transform: translate(0,0,0);
 		opacity: 1;	
 	}
 }
 
 @keyframes fadeIn {
 	0% {
+		transform: translate(0, 0);
 		opacity: 0;
 	}
 	100% {
+		transform: translate(0, 0, 0);
 		opacity: 1;
 	}
 }
@@ -202,6 +217,7 @@ projects
 .projects {
     padding-top: 30px;	
 	padding-bottom: 100px;
+	min-height: 100vh;
 }
 
 .project {
@@ -287,6 +303,7 @@ contacts
 }
 
 .contacts-cont {
+	display: none;
 	padding-top: 30px;
 	text-align: center;
 }
@@ -436,8 +453,10 @@ contacts
 
 
 	.about-cont {
+		display: block;
 		width: 95%;
 		margin-top: 10vh;
+		 
 		> img {
 			display: none;
 		}
@@ -450,23 +469,28 @@ contacts
 			.about-hdr {
 				display: block;
 				text-align: center;
-				animation: RL 2s;
 				/*opacity: 0;*/
+				animation: RL 2s ease-in-out;
+				
 			}
 
 			.about-par {
 				margin-bottom: 25px;
 				line-height: 2;
+
+
+				opacity: 0;
 				animation: RL 2s;
 				animation-delay: 0.3s;
-				/*opacity: 0;*/
+				
 
 			}
 
 			.about-quote {
+				opacity: 0;
 				animation: RL 2s;
 				animation-delay: 0.5s;
-				/*opacity: 0;*/
+				
 			}
 		}
 	}
@@ -478,21 +502,21 @@ contacts
     	
 
 		.basketball {
-			opacity: 0;
-			/*animation: LR 2s;*/
+			/*opacity: 0;*/
+			animation: LR 2s;
 			text-align: left;
 		}
 
 		.traveling {
 			opacity: 0;
-			/*animation: LR 2s;*/
+			animation: LR 2s;
 			animation-delay: 0.3s;
 			margin-right: 10%;
 		}    	
 
 		.art {
 			opacity: 0;
-			/*animation: LR 2s;*/
+			animation: LR 2s;
 			animation-delay: 0.5s
 		}
 	}
@@ -506,39 +530,42 @@ contacts
 	}
 
 	.lakers {
-		opacity: 0;
-		/*animation: RL 1.5s;*/
+		/*opacity: 0;*/
+		animation: RL 1.5s;
 	}
 
 	.surfing {
-		opacity: 0;
+		/*opacity: 0;*/
 		margin-right: 126px;
-		/*animation: LR 1.5s;*/
+		animation: LR 1.5s;
 	}
 
 	.sky_diving {
-		opacity: 0;
+		/*opacity: 0;*/
     	margin-left: 67px;
-    	/*animation: LR 1.5s;*/
+    	animation: LR 1.5s;
 	}
 
 	.thailand {
-		opacity: 0;
+		/*opacity: 0;*/
 		margin-right: 15px;
-		/*animation: LR 1.5s;*/
+		animation: LR 1.5s;
 	}
 
 	.singapore {
+		/*opacity: 0;*/
     	margin-right: 84px;
     	animation: RL 1.5s;
 	}
 
 	.drawing {
+		/*opacity: 0;*/
 		margin-right: 23px;
 		animation: RL 1.5s;
 	}
 
 	.graphic_design {
+		/*opacity: 0;*/
 		margin-right: 70px;
 		animation: LR 1.5s;
 	}
@@ -557,8 +584,8 @@ contacts
 	}
 
 	.project {
-		
-		display: inline-block;
+		/*inline-block*/
+		display: none;
 		margin: 30px;
 		vertical-align: top;
 	}
