Used skrollr for animation scroll

--- a/css/background.less
+++ b/css/background.less
@@ -29,7 +29,7 @@ splash page
 .white {
 	background-color: white;
 	z-index: 2;
-	animation: fadeInBack 2s;
+	/*animation: fadeInBack 2s;*/
 }
 
 @keyframes fadeInBack {
@@ -89,6 +89,9 @@ projects
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center ;
+	/*height: 100%;*/
+	width: 100%;
+	content: '';
 }
 
 .project-cont {
