--- a/css/display.less
+++ b/css/display.less
@@ -60,44 +60,44 @@ body, html, main {
 /*animation code*/
 @keyframes LR {
 	0% {
-		transform: translate(70px,0);
+		transform: translate3d(70px,0,0);
 		opacity: 0;
 	}
 	100% {
-		transform: translate(0,0,0);
+		transform: translate3d(0,0,0);
 		opacity: 1;	
 	}
 }
 
 @keyframes LRout {
 	0% {
-		transform: translate(0,0);
+		transform: translate3d(0,0);
 		opacity: 1;
 	}
 	100% {
-		transform: translate(-70px,0,0);
+		transform: translate3d(-70px,0,0);
 		opacity: 0;	
 	}
 }
 
 @keyframes RL {
 	0% {
-		transform: translate(-70px,0);
+		transform: translate3d(-70px,0,0);
 		opacity: 0;
 	}
 	100% {
-		transform: translate(0,0,0);
+		transform: translate3d(0,0,0);
 		opacity: 1;	
 	}
 }
 
 @keyframes fadeIn {
 	0% {
-		transform: translate(0, 0);
+		transform: translate3d(0, 0, 0);
 		opacity: 0;
 	}
 	100% {
-		transform: translate(0, 0, 0);
+		transform: translate3d(0, 0, 0);
 		opacity: 1;
 	}
 }
@@ -217,7 +217,7 @@ projects
 .projects {
     padding-top: 30px;	
 	padding-bottom: 100px;
-	min-height: 100vh;
+	/*min-height: 100vh;*/
 }
 
 .project {
@@ -303,7 +303,7 @@ contacts
 }
 
 .contacts-cont {
-	display: none;
+	/*display: none;*/
 	padding-top: 30px;
 	text-align: center;
 }
@@ -470,26 +470,22 @@ contacts
 				display: block;
 				text-align: center;
 				/*opacity: 0;*/
-				animation: RL 2s ease-in-out;
+				/*animation: RL 2s ease-in-out;*/
 				
 			}
 
 			.about-par {
 				margin-bottom: 25px;
-				line-height: 2;
-
-
-				opacity: 0;
-				animation: RL 2s;
-				animation-delay: 0.3s;
+				line-height: 1.3;
+				/*animation: RL 2s;
+				animation-delay: 0.3s;*/
 				
 
 			}
 
 			.about-quote {
-				opacity: 0;
-				animation: RL 2s;
-				animation-delay: 0.5s;
+				/*animation: RL 2s;
+				animation-delay: 0.5s;*/
 				
 			}
 		}
@@ -503,21 +499,19 @@ contacts
 
 		.basketball {
 			/*opacity: 0;*/
-			animation: LR 2s;
+			/*animation: LR 2s;*/
 			text-align: left;
 		}
 
 		.traveling {
-			opacity: 0;
-			animation: LR 2s;
-			animation-delay: 0.3s;
+			/*animation: LR 2s;
+			animation-delay: 0.3s;*/
 			margin-right: 10%;
 		}    	
 
 		.art {
-			opacity: 0;
-			animation: LR 2s;
-			animation-delay: 0.5s
+			/*animation: LR 2s;
+			animation-delay: 0.5s*/
 		}
 	}
 
@@ -531,43 +525,43 @@ contacts
 
 	.lakers {
 		/*opacity: 0;*/
-		animation: RL 1.5s;
+		/*animation: RL 1.5s;*/
 	}
 
 	.surfing {
 		/*opacity: 0;*/
 		margin-right: 126px;
-		animation: LR 1.5s;
+		/*animation: LR 1.5s;*/
 	}
 
 	.sky_diving {
 		/*opacity: 0;*/
     	margin-left: 67px;
-    	animation: LR 1.5s;
+    	/*animation: LR 1.5s;*/
 	}
 
 	.thailand {
 		/*opacity: 0;*/
 		margin-right: 15px;
-		animation: LR 1.5s;
+		/*animation: LR 1.5s;*/
 	}
 
 	.singapore {
 		/*opacity: 0;*/
     	margin-right: 84px;
-    	animation: RL 1.5s;
+    	/*animation: RL 1.5s;*/
 	}
 
 	.drawing {
 		/*opacity: 0;*/
 		margin-right: 23px;
-		animation: RL 1.5s;
+		/*animation: RL 1.5s;*/
 	}
 
 	.graphic_design {
 		/*opacity: 0;*/
 		margin-right: 70px;
-		animation: LR 1.5s;
+		/*animation: LR 1.5s;*/
 	}
 
 
@@ -585,8 +579,8 @@ contacts
 
 	.project {
 		/*inline-block*/
-		display: none;
-		margin: 30px;
+		display: inline-block;
+		margin: 27px;
 		vertical-align: top;
 	}
 
@@ -599,7 +593,7 @@ contacts
 	}
 
 	.contact-sect {
-		width: 49%;
+		width: 44%;
     	display: inline-block;
 
 		ul > a > li {
@@ -623,11 +617,11 @@ contacts
 	    text-align: center;
 
 	    .contacts-me {
-	    	animation: RL 2s;
+	    	/*animation: RL 2s;*/
 	    }
 
 	    .sources {
-	    	animation: LR 2s;
+	    	/*animation: LR 2s;*/
 	    }
 	}
 
