Added the skrollr animation for scrolling up

--- a/css/background.less
+++ b/css/background.less
@@ -16,6 +16,7 @@ splash page
 	margin-left: auto;
     margin-right: auto;
     width: 98%;
+    content: '';
 }
 
 .splash-img {
@@ -28,8 +29,7 @@ splash page
 
 .white {
 	background-color: white;
-	z-index: 2;
-	/*animation: fadeInBack 2s;*/
+	z-index: -1;
 }
 
 @keyframes fadeInBack {
