--- a/css/display.less
+++ b/css/display.less
@@ -195,8 +195,8 @@ about me
 
 .about-cont {
 	width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 25px auto 0;
+    line-height: 1.5;
 }
 
 .about-cont > img {
