Made fixes on mobile format

--- a/css/typography.less
+++ b/css/typography.less
@@ -1,5 +1,6 @@
-
-
+@greenOne: rgb(47, 122, 50);
+@greenTwo: rgb(52, 168, 56);
+@greenThree: rgb(55, 191, 60);
 
 /***************************
 splash page
@@ -161,7 +162,7 @@ contacts
 	.animation {
 		font-size: 70px;
 		line-height: 1;
-		color: rgb(60,155,64);
+		color: @greenOne;
 
 		h3 {
 			line-height: 1;
@@ -178,6 +179,7 @@ contacts
 
 	.lakers {
 		font-size: 38px;
+		color: @greenThree;
 	}
 
 	.surfing {
@@ -187,15 +189,18 @@ contacts
 	.sky_diving {
 		font-size: 61px;
 		text-align: left;
+		color: @greenTwo;
 	}
 
 	.thailand {
 		font-size: 65px;
+		color: @greenTwo;
 	}
 
 	.singapore {
 		font-size: 35px;
 		text-align: center;
+		color: @greenThree;
 	}
 
 	.drawing {
@@ -204,6 +209,7 @@ contacts
 
 	.graphic_design {
 		font-size: 40px;
+		color: @greenTwo;
 	}
 
 
