Fixed about-me picture to be responsive width height

--- a/css/display.less
+++ b/css/display.less
@@ -470,12 +470,15 @@ contacts
 		display: inline-block;
 	    width: 45%;
 	    float: right;
-	    margin-right: 10%;
+	    margin-right: 7%;
+	    margin-top: 6vh;
 	}
 
 	.aboutme > img {
 		display: unset;
 		max-width: 700px;
+	    max-height: 636px;
+	    width: 100%; 
 	}
 
 	.about-cont {
@@ -489,7 +492,7 @@ contacts
 
 		.desc {
 			display: inline-block;
-			width: 40%;
+			width: 45%;
 			padding: 70px;
 
 			.about-hdr {
