--- a/css/display.less
+++ b/css/display.less
@@ -224,6 +224,14 @@ about me
 	display: none;
 }
 
+.about-hdr {
+	margin:	0.5em 0;
+}
+
+.desc > p {
+	font-size: 14px;
+}
+
 
 
 
@@ -389,6 +397,10 @@ contacts
 		padding-top: 60px;
 	}
 
+	.desc > p {
+		font-size: 22px;
+	}
+
 
 	/***************************
 	projects
@@ -493,7 +505,8 @@ contacts
 		.desc {
 			display: inline-block;
 			width: 45%;
-			padding: 70px;
+			/*padding: 70px;*/
+			margin: 0 12px;
 
 			.about-hdr {
 				display: block;
@@ -505,7 +518,7 @@ contacts
 
 			.about-par {
 				margin-bottom: 25px;
-				line-height: 1.7;
+				line-height: 1.4;
 				/*animation: RL 2s;
 				animation-delay: 0.3s;*/
 				
@@ -554,46 +567,7 @@ contacts
     	padding-left: 41px;
 	}
 
-	.lakers {
-		/*opacity: 0;*/
-		/*animation: RL 1.5s;*/
-	}
 
-	.surfing {
-		/*opacity: 0;*/
-		margin-right: 126px;
-		/*animation: LR 1.5s;*/
-	}
-
-	.sky_diving {
-		/*opacity: 0;*/
-    	margin-left: 67px;
-    	/*animation: LR 1.5s;*/
-	}
-
-	.thailand {
-		/*opacity: 0;*/
-		margin-right: 15px;
-		/*animation: LR 1.5s;*/
-	}
-
-	.singapore {
-		/*opacity: 0;*/
-    	margin-right: 84px;
-    	/*animation: RL 1.5s;*/
-	}
-
-	.drawing {
-		/*opacity: 0;*/
-		margin-right: 23px;
-		/*animation: RL 1.5s;*/
-	}
-
-	.graphic_design {
-		/*opacity: 0;*/
-		margin-right: 70px;
-		/*animation: LR 1.5s;*/
-	}
 
 
 	/***************************
@@ -636,8 +610,9 @@ contacts
 
 		ul > a > li {
 		    padding: 30px;
-		    padding-left: 33%;
+		    padding-left: 22%;
 		    border: none;
+		    
 
 		    img {
 		    	width: 35px;
