--- a/css/typography.less
+++ b/css/typography.less
@@ -94,7 +94,7 @@ contacts
 
 		.desc {
 			/*font-size: 24px;*/
-			line-height: 6vw;
+			line-height: 4vw;
 		}
 	}
 
@@ -225,4 +225,21 @@ contacts
 	.contacts-hdr {
 		font-size: 3em;
 	}
+
+	.contact-sect {
+
+		ul > a > li {
+		    font-size: 18px;
+		}
+	}
+}
+
+
+
+@media only screen and (min-width: 1450px) {
+
+	.about-cont .desc .about-par {
+	    line-height: 1.9;
+	}
+
 }
