--- a/css/background.less
+++ b/css/background.less
@@ -9,7 +9,7 @@ splash page
 ****************************/
 
 .splash {
-	background-image: url(../images/beach1.png);
+	background-image: url(../images/beach1.jpg);
 	background-position: center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -64,10 +64,6 @@ nav
 ****************************/
 .nav {
 	background: white;
-    background: -webkit-linear-gradient(white, rgba(255,255,255,0), rgba(255,255,255,0)); 
-    background: -o-linear-gradient(white, rgba(255,255,255,0), rgba(255,255,255,0)); 
-    background: -moz-linear-gradient(white, rgba(255,255,255,0), rgba(255,255,255,0));
-    background: linear-gradient(white, rgba(255,255,255,0), rgba(255,255,255,0));
 }
 
 /***************************
@@ -84,9 +80,9 @@ projects
 ****************************/
 .projects {
 	background-color: lightgray;
-	background-image: url(../images/beach3.png);
+	background-image: url(../images/beach3.jpg);
 	background-size: cover;
-	background-attachment: fixed;
+	/*background-attachment: fixed;*/
 	background-repeat: no-repeat;
 	background-position: center ;
 	width: 100%;
@@ -98,7 +94,9 @@ projects
 }
 
 .project-desc {
-	background-color: rgb(0,0,0);
+	background-color: rgb(217, 217, 217);
+	background-image: url(../images/arrow-down.png);
+    background-repeat: repeat-x;
 }
 
 .project1 > .project-cont > .img {
@@ -162,7 +160,10 @@ about me
 /***************************
 projects
 ****************************/
-
+.project-desc {
+	background-image: url(../images/arrow-right.png);
+    background-repeat: repeat-y;
+}
 
 /***************************
 contacts
@@ -181,7 +182,13 @@ contacts
 	/***************************
 	nav
 	****************************/
-
+	.nav {
+		background: white;
+	    background: -webkit-linear-gradient(white, rgba(255,255,255,0), rgba(255,255,255,0)); 
+	    background: -o-linear-gradient(white, rgba(255,255,255,0), rgba(255,255,255,0)); 
+	    background: -moz-linear-gradient(white, rgba(255,255,255,0), rgba(255,255,255,0));
+	    background: linear-gradient(white, rgba(255,255,255,0), rgba(255,255,255,0));
+	}
 
 	/***************************
 	about me
@@ -195,7 +202,11 @@ contacts
 	/***************************
 	projects
 	****************************/
+	.projects {
 
+		background-attachment: fixed;
+
+	}
 
 	/***************************
 	contacts
