--- a/css/display.less
+++ b/css/display.less
@@ -29,7 +29,7 @@ body, html, main {
 }
 
 .wrapper {
-	height: 92vh;
+	height: 100vh;
 }
 
 .wrappers {
@@ -139,7 +139,7 @@ splash page
 }
 
 .splash-top, .splash-bottom {
-    height: 17vh;
+    height: 26vh;
     border: none;
     width: 101%;
     margin: -5px -2px;
@@ -166,6 +166,9 @@ splash page
 nav
 ****************************/
 .nav {
+/*	position: fixed;
+    top: 0;*/
+    display: none;
 	width: 100%;
 	height: 8vh;
 	z-index: 10;
@@ -254,7 +257,6 @@ projects
 .project-cont {
 	height: 435px;
 	text-align: center;
-	border: 3px double;
 
 	.img {
 		display: block;
@@ -275,8 +277,10 @@ projects
 	height: 50%;
 	position: relative;
     vertical-align: top;
+    padding-top: 15px;
+
 	p {
-		padding: 1em;
+		padding: 0 1em;
 	}
 
 	p > span {
@@ -288,15 +292,15 @@ projects
 }
 
 .project-btn {
-	border-top: 1px solid white;
+	/*border-top: 1px solid white;*/
 	position: absolute;
-    bottom: -7px;
+    bottom: -6px;
     width: 100%;
 	a:nth-child(1) > img {
-		border-right: 1px solid white;	
+		border-right: 1px solid black;	
 	}
 	img {
-		padding: 5px 16%;
+		padding: 8px 16%;
 	}
 
 }
@@ -323,6 +327,10 @@ projects
 /***************************
 contacts
 ****************************/
+.contact {
+	height: unset;
+}
+
 .contacts-hdr {
 	margin-bottom: 25px;
 }
@@ -374,13 +382,15 @@ contacts
 		height:17vh;
 	}
 
+
+
 	/***************************
 	nav
 	****************************/
 	.nav {
-
+		
 		ul {
-			padding: 2rem;
+			padding: 1rem;
 		}
 
 		ul > li {
@@ -465,6 +475,10 @@ contacts
 /****Desktop View*****/
 @media only screen and (min-width: 1000px) {
 
+	.wrapper {
+		height: 92vh;
+	}
+
 	/***************************
 	splash page
 	****************************/
@@ -474,7 +488,7 @@ contacts
 	nav
 	****************************/
 	.nav {
-
+		display: block;
 		ul > li {
 			padding: 0 60px;
 
@@ -505,7 +519,9 @@ contacts
 	.about-cont {
 		display: block;
 		width: 95%;
+		min-height: 100vh;
 		margin-top: 10vh;
+
 		 
 		> img {
 			display: none;
@@ -537,7 +553,7 @@ contacts
 			.about-quote {
 				/*animation: RL 2s;
 				animation-delay: 0.5s;*/
-				
+				padding-bottom: 30px;
 			}
 		}
 	}
