--- a/css/typography.less
+++ b/css/typography.less
@@ -40,17 +40,17 @@ projects
 
 .project-desc {
 
-	color: rgb(255, 255, 255);
+	color: rgb(0,0,0);
 	font-size: 14.1px;	
 
-	p > span {
+	p  {
 		display: block;
 		margin-top: 6px;
 		word-wrap: break-word;
 		font-style: italic;
 	}
 
-	p > span > strong {
+	p > strong {
 		color: rgb(80,169,110);
 	}
 }
@@ -110,7 +110,7 @@ contacts
 	}
 
 	.project-desc {
-		font-size: 19px;
+		font-size: 16px;
     	line-height: 1.4;
 	}
 
