--- a/css/typography.less
+++ b/css/typography.less
@@ -34,8 +34,10 @@ about me
 /***************************
 projects
 ****************************/
+
 .project-hdr {
 	text-align: center;
+	color: rgb(60,155,64);
 }
 
 .project-desc {
@@ -94,7 +96,7 @@ contacts
 
 		.desc {
 			/*font-size: 24px;*/
-			line-height: 4vw;
+			line-height: 5vw;
 		}
 	}
 
@@ -178,40 +180,6 @@ contacts
 		}
 	}
 
-	.lakers {
-		font-size: 38px;
-		color: @greenThree;
-	}
-
-	.surfing {
-		font-size: 46px;
-	}
-
-	.sky_diving {
-		font-size: 61px;
-		text-align: left;
-		color: @greenTwo;
-	}
-
-	.thailand {
-		font-size: 65px;
-		color: @greenTwo;
-	}
-
-	.singapore {
-		font-size: 35px;
-		text-align: center;
-		color: @greenThree;
-	}
-
-	.drawing {
-		font-size: 38px;
-	}
-
-	.graphic_design {
-		font-size: 40px;
-		color: @greenTwo;
-	}
 
 
 	/***************************
