--- a/css/display.less
+++ b/css/display.less
@@ -286,7 +286,7 @@ projects
 	height: 50%;
 	position: relative;
     vertical-align: top;
-    padding-top: 15px;
+    /*padding-top: 15px;*/
 
 	p {
 		padding: 0 1em;
@@ -314,6 +314,7 @@ projects
 	}
 	img {
 		padding: 8px 16%;
+		height: 100%;
 	}
 
 }
