Changed the Splash page image to css text styling

--- a/css/background.less
+++ b/css/background.less
@@ -32,6 +32,15 @@ splash page
 	z-index: -1;
 }
 
+.fullstack {
+	background: url(../images/beach1.jpg) no-repeat;
+	background-size: contain;
+	background-attachment: fixed;
+	background-position: center;
+	-webkit-background-clip: text;
+
+}
+
 @keyframes fadeInBack {
 	0% {
 		transform: translate(0, 0, 0);
