--- a/css/display.less
+++ b/css/display.less
@@ -112,8 +112,66 @@ body, html, main {
 /***************************
 splash page
 ****************************/
+
+.header-item {
+	display: block;
+	width: 90%;
+	max-width: 576px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 10vh;
+}
+
+.first-name {
+	font-size: 8vw;
+	margin-top: 0;
+	margin-bottom: -18px;
+}
+
+
+
+.fullstack {
+	font-size: 4.85vw;
+	display:inline-block;
+	-webkit-transform:scale(1,2.5); /* Safari and Chrome */
+	-moz-transform:scale(1,2.5); /* Firefox */
+	-ms-transform:scale(1,2.5); /* IE 9 */
+	-o-transform:scale(1,2.5); /* Opera */
+	transform:scale(1,2.5); /* W3C */
+
+
+}
+
+.developer {
+	display:inline-block;
+	-webkit-transform:scale(1,0.5); /*Safari and Chrome */
+	-moz-transform:scale(1,0.5); /* Firefox */
+	-ms-transform:scale(1,0.5); /* IE 9 */
+	-o-transform:scale(1,0.5); /* Opera */
+	transform:scale(1,0.5); /* W3C */
+	border-bottom: 10px solid @greenOne;
+	padding-bottom: 7px;
+	margin-bottom: -18px;
+}
+
+.list-frontend {
+	width: 101%;
+}
+
+.list-backend {
+	display: inline-block;
+	width: 101%;
+}
+
+
+
+
+
+
+
 .contain {
 	text-align: center;
+	min-height: 92vh;
 }
 
 
