--- a/css/typography.less
+++ b/css/typography.less
@@ -2,10 +2,53 @@
 @greenTwo: rgb(52, 168, 56);
 @greenThree: rgb(55, 191, 60);
 
+@Bowlby: 'Bowlby One', cursive;
+@Anton: 'Anton', sans-serif;
+
 /***************************
 splash page
 ****************************/
+.header-item {
+	font-family: @Anton;
+}
 
+.first-name {
+	font-size: 30.6vw;
+    line-height: 0.75;
+	color: @greenTwo;
+}
+
+.last-name {
+	font-size: 24vw;
+	color: @greenOne;
+	/*margin-bottom: -13px;*/
+}
+
+.fullstack {
+	font-size: 18.12vw;
+	color: green;
+	-webkit-text-fill-color: transparent;
+	line-height: 1.6;
+}
+
+.developer {
+	font-size: 17.82vw;
+	color: @greenOne;
+	line-height: 1.2;
+}
+
+.list-frontend {
+	font-size: 3.4vw;
+	color: @greenTwo;
+	line-height: 1;
+	word-spacing: 0.1vw;
+}
+
+.list-backend {
+	font-size: 3.3vw;
+	color: @greenTwo;
+	word-spacing: 0.01vw;
+}
 
 /***************************
 nav
@@ -77,7 +120,34 @@ contacts
 	/***************************
 	splash page
 	****************************/
+	.header-item {
+		padding-bottom: 50px;
+	}
 
+	.first-name {
+		font-size: 197px;
+	}
+
+	.last-name {
+		font-size: 154px;
+
+	}
+
+	.fullstack {
+		font-size: 117px;
+	}
+
+	.developer {
+		font-size: 115px;
+	}
+
+	.list-frontend {
+		font-size: 22px;
+	}
+
+	.list-backend {
+		font-size: 21.5px; 
+	}
 
 	/***************************
 	nav
