Fixed background image on fullstack knockout letters

--- a/css/background.less
+++ b/css/background.less
@@ -34,7 +34,7 @@ splash page
 
 .fullstack {
 	background: url(../images/beach1.jpg) no-repeat;
-	background-size: contain;
+	background-size: cover;
 	background-attachment: fixed;
 	background-position: center;
 	-webkit-background-clip: text;
