splash page fix on fullstack letters

--- a/css/typography.less
+++ b/css/typography.less
@@ -14,12 +14,13 @@ splash page
 
 .first-name {
 	font-size: 30.6vw;
-    line-height: 0.75;
+    line-height: 1;
 	color: @greenTwo;
 }
 
 .last-name {
 	font-size: 24vw;
+	line-height: 1;
 	color: @greenOne;
 	/*margin-bottom: -13px;*/
 }
@@ -28,7 +29,7 @@ splash page
 	font-size: 18.12vw;
 	color: green;
 	-webkit-text-fill-color: transparent;
-	line-height: 1.6;
+	line-height: 1;
 }
 
 .developer {
@@ -42,6 +43,7 @@ splash page
 	color: @greenTwo;
 	line-height: 1;
 	word-spacing: 0.1vw;
+	margin-top: 5px;
 }
 
 .list-backend {
