--- a/css/display.less
+++ b/css/display.less
@@ -125,7 +125,7 @@ splash page
 .first-name {
 	font-size: 8vw;
 	margin-top: 0;
-	margin-bottom: -18px;
+	/*margin-bottom: -18px;*/
 }
 
 
@@ -139,7 +139,7 @@ splash page
 	-o-transform:scale(1,2.5); /* Opera */
 	transform:scale(1,2.5); /* W3C */
 
-
+	margin: 12vw 0 6vw 0;
 }
 
 .developer {
@@ -454,6 +454,9 @@ contacts
 		height:17vh;
 	}
 
+	.fullstack {
+		margin: 78px 0 35px 0;
+	}
 
 
 	/***************************
