fixed contact page font-size for mobile version

--- a/css/typography.less
+++ b/css/typography.less
@@ -114,6 +114,13 @@ contacts
 	color: rgb(60,155,64);
 }
 
+.contact-sect {
+
+	ul > a > li {
+	    font-size: 14px;
+	}
+}
+
 
 
 /****iPad View*****/
@@ -269,7 +276,7 @@ contacts
 	.contact-sect {
 
 		ul > a > li {
-		    font-size: 18px;
+		    font-size: 21px;
 		}
 	}
 }
