--- a/css/display.less
+++ b/css/display.less
@@ -319,6 +319,7 @@ projects
 	height: 25%;
     width: 90%;
     margin: 20px auto;
+    /*opacity: 1 !important;*/
 }
 
 .project-cont {
@@ -633,30 +634,7 @@ contacts
 	}
 
 
-	.animation {
-		width: 100%;
-    	text-align: right;
-    	max-width: 700px;
-    	float: right;
-    	
 
-		.basketball {
-			/*opacity: 0;*/
-			/*animation: LR 2s;*/
-			text-align: left;
-		}
-
-		.traveling {
-			/*animation: LR 2s;
-			animation-delay: 0.3s;*/
-			margin-right: 10%;
-		}    	
-
-		.art {
-			/*animation: LR 2s;
-			animation-delay: 0.5s*/
-		}
-	}
 
 	.edgar-anima {
 		display: inline-block;
@@ -686,6 +664,7 @@ contacts
 		display: inline-block;
 		margin: 27px;
 		vertical-align: top;
+		/*opacity: unset;*/
 	}
 
 	.project-btn {
