Added the font-family's to all texts

--- a/css/display.less
+++ b/css/display.less
@@ -218,6 +218,10 @@ splash page
     z-index: -1;
 }
 
+.list-backend {
+	padding-bottom: 20px;
+}
+
 
 
 /***************************
@@ -679,6 +683,16 @@ contacts
 		> h4 {
 	    	padding-top: 7px;
 	    }
+	}
+
+	.project-desc > h4.hdr-logroom {
+		padding-top: 15px;
+		padding-bottom: 10px;
+	}
+
+	.project-desc > h4.hdr-brew {
+		padding-top: 15px;
+		padding-bottom: 10px;
 	}
 
 
